prettify before push